genel geliştirmeler tamamlandi.

--- a/tab-1/ic-denetim.html
+++ b/tab-1/ic-denetim.html
@@ -33,7 +33,7 @@
 
 <body>
     <!-- Navbar Start -->
-     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm py-3 py-lg-0 px-3 px-lg-0">
+    <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm py-3 py-lg-0 px-3 px-lg-0">
         <a href="../index.html" class="navbar-brand ms-lg-5">
 			<img class="img-fluid rounded" style="max-width: 250px;height: 1cm;" src="../img/sirketlogoakc_transparent.png" alt="">
         </a>
@@ -125,7 +125,7 @@
             <div class="col-lg-12">
                 <!-- Blog Detail Start -->
                 <div class="mb-5">
-                    <img class="img-fluid w-100 rounded mb-5" src="../img/tab2/Vergi-Yonetim-Danismanligi-scaled.jpg" alt="">
+                    <img class="img-fluid w-100 rounded mb-5" src="../img/tab1/Ic-Denetim-scaled.jpg" alt="">
                 </div>
                 <!-- Blog Detail End -->
             </div>
@@ -137,10 +137,10 @@
 				justify-content: center;
 				align-items: center;">
                    <div class="vc_column-inner vc_custom_1633813648599"><div class="wpb_wrapper"><div id="ultimate-heading-3993646029aedeca2" class="uvc-heading ult-adjust-bottom-margin ultimate-heading-3993646029aedeca2 uvc-8082 " data-hspacer="no_spacer" data-halign="left" style="text-align:left"><div class="uvc-heading-spacer no_spacer" style="top"></div><div class="uvc-sub-heading ult-responsive" data-ultimate-target=".uvc-heading.ultimate-heading-3993646029aedeca2 .uvc-sub-heading " data-responsive-json-new="{&quot;font-size&quot;:&quot;desktop:30px;&quot;,&quot;line-height&quot;:&quot;desktop:35px;&quot;}" style="font-weight:bold;color:#042342;margin-bottom:30px;"><h2>KDV İadesi Tespit Çalışmaları
-Düzenli Bilgilendirme</h2></div></div>
+Süreç Analizi</h2></div></div>
 				<div class="wpb_text_column wpb_content_element ">
 					<div class="wpb_wrapper">
-			<p>Mevzuat düzenlemeleri ve kararnameler ile sıkça değişen vergi uygulamaları karşısında sade bir anlatımla notlar düzenliyor, bilgilerinizin güncelliğini koruyoruz</p>
+			<p>Denetim ve Danışmanlık ekiplerimiz tarafından şirketinizin tüm operasyon süreçleri analiz edilir. Yapılan çalışmanın ardından basamaklı süreç dokümantasyonu hazırlanır</p>
 		</div>
 	</div>
 			</div></div>
@@ -151,10 +151,10 @@ Düzenli Bilgilendirme</h2></div></div>
 				justify-content: center;
 				align-items: center;">
                    <div class="vc_column-inner vc_custom_1633813648599"><div class="wpb_wrapper"><div id="ultimate-heading-3993646029aedeca2" class="uvc-heading ult-adjust-bottom-margin ultimate-heading-3993646029aedeca2 uvc-8082 " data-hspacer="no_spacer" data-halign="left" style="text-align:left"><div class="uvc-heading-spacer no_spacer" style="top"></div><div class="uvc-sub-heading ult-responsive" data-ultimate-target=".uvc-heading.ultimate-heading-3993646029aedeca2 .uvc-sub-heading " data-responsive-json-new="{&quot;font-size&quot;:&quot;desktop:30px;&quot;,&quot;line-height&quot;:&quot;desktop:35px;&quot;}" style="font-weight:bold;color:#042342;margin-bottom:30px;"><h2>KDV İadesi Tespit Çalışmaları
-Model Oluşturma</h2></div></div>
+Süreç Analizi</h2></div></div>
 				<div class="wpb_text_column wpb_content_element ">
 					<div class="wpb_wrapper">
-			<p>Şirketinizin türü, sektörünüz, tabi olduğunuz kanun ve yönetmelikler çerçevesinde tanınan vergi avantajlarından en üst düzeyde faydalanacağınız modeli oluşturuyoruz</p>
+			<p>Yazılı süreçler üzerinden kontrol noktaları tespit edilir. Finansal tabloları etkileyebilecek aşamalarda onay ve kontrol mekanizmaları geliştirilir</p>
 		</div>
 	</div>
 			</div></div>
@@ -165,10 +165,10 @@ Model Oluşturma</h2></div></div>
 				justify-content: center;
 				align-items: center;">
                    <div class="vc_column-inner vc_custom_1633813648599"><div class="wpb_wrapper"><div id="ultimate-heading-3993646029aedeca2" class="uvc-heading ult-adjust-bottom-margin ultimate-heading-3993646029aedeca2 uvc-8082 " data-hspacer="no_spacer" data-halign="left" style="text-align:left"><div class="uvc-heading-spacer no_spacer" style="top"></div><div class="uvc-sub-heading ult-responsive" data-ultimate-target=".uvc-heading.ultimate-heading-3993646029aedeca2 .uvc-sub-heading " data-responsive-json-new="{&quot;font-size&quot;:&quot;desktop:30px;&quot;,&quot;line-height&quot;:&quot;desktop:35px;&quot;}" style="font-weight:bold;color:#042342;margin-bottom:30px;"><h2>KDV İadesi Tespit Çalışmaları
-Model Uygulama</h2></div></div>
+Gözetim</h2></div></div>
 				<div class="wpb_text_column wpb_content_element ">
 					<div class="wpb_wrapper">
-			<p>Tek noktadan hizmet anlayışımız ile sağladığımız danışmanlık çıktılarının; muhasebe kayıtları ve resmi kurumlara yapılması gereken başvurular yönüyle uygulamasını da gerçekleştiriyoruz</p>
+			<p>Kontrol noktalarının efektif şekilde çalışırlığının denetlenmesi için belirlenecek düzenli periyotlarda  gözetim faaliyetleri yürütülür</p>
 		</div>
 	</div>
 			</div></div>
@@ -185,10 +185,21 @@ Model Uygulama</h2></div></div>
 					<div class="vc_row wpb_row vc_inner vc_row-fluid vc_custom_1634005714433"><div class="wpb_column vc_column_container vc_col-sm-8 vc_col-lg-offset-2"><div class="vc_column-inner"><div class="wpb_wrapper">
 	<div class="wpb_text_column wpb_content_element  vc_custom_1636650504565">
 		<div class="wpb_wrapper">
-<p>Vergi planlaması kavramı, mükelleflerin vergi yüklerini azaltma amacıyla kanunların tanıdığı haklardan kendileri için en uygunlarının belirlenmesi ve uygulanması çabasının sonucu ortaya çıkmıştır.</p>
-<p>Vergi planlaması ile sağlanan vergi avantajlarından en üst düzeyde yararlanılarak mevzuata uyumlu bir şekilde vergi maliyetleri yönetilir.</p>
-<p>Vergi partnerlerimizin kamu ve özel sektörde elde ettikleri tecrübeleriyle şekillendirdikleri vergi yönetimi metodu, şirketinizin vergiyle ilişkili risk ve fırsatlarına bir arada odaklanır.</p>
-<p>AKC DENETİM, farklı vergi kanunlarında uzmanlaşmış kadrosuyla güçlü bir vergi yönetimi yapısının geliştirilmesini sağlar. Mükellef haklarınızdan en üst düzeyde yararlanmanızı sağlarken, yersiz oluşan vergi faiz ve cezalarıyla karşılaşmazsınız. Şirketiniz ana faaliyetiniz dışındaki fırsatları da ekonomik değere dönüştürmeye başlar.</p>
+			<p>İç denetim, bir kurumun amaçlarına ulaşmasına yardımcı olmak üzere, o kurumun risk yönetimi, kontrol faaliyetleri ve kurumsal yönetim süreçlerini değerlendirerek, bu süreçleri oluşturmak, iyileştirmek ve geliştirmek amaçlı yapılan denetim ve danışmanlık faaliyetidir.</p>
+<p>İç denetim, kurumun risk yönetim, kontrol ve yönetişim süreçlerinin etkililiğini değerlendirmek ve geliştirmek amacına yönelik sistemli ve disiplinli bir yaklaşım getirerek kurumun amaçlarına ulaşmasına yardımcı olurken kurum içi hile ve usulsüzlük riskini minimize eder.</p>
+<p>AKC DENETİM, kurumunuza dışarıdan iç denetim hizmeti sunabileceği gibi, şirketinizin iç denetim biriminin kurulmasına katkı sağlayabilir, mevcut iç denetim ekibinize dış kaynak sağlayarak personel ihtiyacınıza da çözüm üretebilir.</p>
+<p><img decoding="async" class="alignnone wp-image-5061" src="../img/madde.png" alt="" width="21" height="21"> İç denetim stratejik planının ve yönetmeliğinin oluşturulması</p>
+<p><img decoding="async" class="alignnone wp-image-5061" src="../img/madde.png" alt="" width="21" height="21"> Etkin risk yönetimi ve kontrol süreçlerinin oluşturulması</p>
+<p><img decoding="async" class="alignnone wp-image-5061" src="../img/madde.png" alt="" width="21" height="21"> Denetim komitesi çalışma esas ve usullerinin belirlenmesi</p>
+<p><img decoding="async" class="alignnone wp-image-5061" src="../img/madde.png" alt="" width="21" height="21"> <em>Kurumun genel risk haritasının oluşturulması</em></p>
+<p><img decoding="async" class="alignnone wp-image-5061" src="../img/madde.png" alt="" width="21" height="21"> Risk değerlendirmesi ve iç denetim planının oluşturulması</p>
+<p><img decoding="async" class="alignnone wp-image-5061" src="../img/madde.png" alt="" width="21" height="21"> Etkinlik ve verimliliği artırmaya yönelik öneriler sunma</p>
+<p><img decoding="async" class="alignnone wp-image-5061" src="../img/madde.png" alt="" width="21" height="21"> İç denetimlerin gerçekleştirilmesi</p>
+<p><img decoding="async" class="alignnone wp-image-5061" src="../img/madde.png" alt="" width="21" height="21"> Süreçlerin konulan politika ve prosedürlere uygun yürütülüp yürütülmediğinin incelenmesi</p>
+<p><img decoding="async" class="alignnone wp-image-5061" src="../img/madde.png" alt="" width="21" height="21"> Kurum risk değerlendirmesinin gerçekleştirilmesi</p>
+<p><img decoding="async" class="alignnone wp-image-5061" src="../img/madde.png" alt="" width="21" height="21"> Yönetime sunulan raporlarının güvenilirliğini artırılmak</p>
+<p><img decoding="async" class="alignnone wp-image-5061" src="../img/madde.png" alt="" width="21" height="21"> Varlıkların korunması, kayıp, kaçak ya da suiistimallerin engellenmesi için öneriler sunma</p>
+
 		</div>
 	</div>
 <div class=" ubtn-ctn-center "><a class="ubtn-link ult-adjust-bottom-margin ubtn-center ubtn-large " href="../tab-6/iletisim.html" title="İletişim"><button type="button" id="ubtn-5812" class="ubtn ult-adjust-bottom-margin ult-responsive ubtn-large ubtn-no-hover-bg  none  ubtn-center   tooltip-64627dd91b8e7" data-hover="" data-border-color="" data-bg="#e23456" data-hover-bg="#c42d55" data-border-hover="" data-shadow-hover="" data-shadow-click="none" data-shadow="" data-shd-shadow="" data-ultimate-target="#ubtn-5812" data-responsive-json-new="{&quot;font-size&quot;:&quot;desktop:14px;&quot;,&quot;line-height&quot;:&quot;desktop:20px;&quot;}" style="font-weight:bold;border-radius:50px;border-width:px;border-color:;border-style:solid;background: #e23456;color: #ffffff;"><span class="ubtn-hover" style="background-color:#c42d55"></span><span class="ubtn-data ubtn-text ">İletişime Geç</span></button></a></div></div></div></div></div>
