--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav mx-auto py-0">
                 <div class="nav-item dropdown">
-				<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" data-target="../tab-1/DenetimVeGuvence.html">Denetim ve Güvence</a>
+				<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" data-target="tab-1/DenetimVeGuvence.html">Denetim ve Güvence</a>
                     <div class="dropdown-menu m-0">
                         <a href="tab-1/bagimsiz-denetim-hizmetleri.html" class="dropdown-item">Bağımsız Denetim Hizmetleri</a>
                         <a href="tab-1/IcDenetim.html" class="dropdown-item">İç Denetim</a>
@@ -54,7 +54,7 @@
                     </div>
                 </div>
 				<div class="nav-item dropdown">
-					<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" data-target="../tab-2/VergiDanismanligi.html">Vergi Danışmanlığı</a>
+					<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" data-target="tab-2/VergiDanismanligi.html">Vergi Danışmanlığı</a>
                     <div class="dropdown-menu m-0">
                         <a href="tab-2/TamTasdikDenetimi.html" class="dropdown-item">Tam Tasdik Denetimi</a>
                         <a href="tab-2/kdv-iade-hizmeti.html" class="dropdown-item">KDV İade Hizmeti</a>
@@ -66,7 +66,7 @@
                     </div>
                 </div>
 				<div class="nav-item dropdown">
-				<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" data-target="../tab-3/KurumsalFinansman.html">Kurumsal Finansman</a>
+				<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" data-target="tab-3/KurumsalFinansman.html">Kurumsal Finansman</a>
                     <div class="dropdown-menu m-0">
                         <a href="tab-3/sirket-birlesmeleri.html" class="dropdown-item">Şirket Birleşmeleri</a>
                         <a href="tab-3/interim-cfo.html" class="dropdown-item">Interim CFO</a>
@@ -75,7 +75,7 @@
                     </div>
                 </div>
 				<div class="nav-item dropdown">
-					<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" data-target="../tab-4/YonetimDanismanligi.html">Yönetim Danışmanlığı</a>
+					<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" data-target="tab-4/YonetimDanismanligi.html">Yönetim Danışmanlığı</a>
                     <div class="dropdown-menu m-0">
                         <a href="tab-4/tesvik-danismanligi.html" class="dropdown-item">Teşvik Danışmanlığı</a>
                         <a href="tab-4/startup-danismanligi.html" class="dropdown-item">Start-Up Danışmanlığı</a>
@@ -86,7 +86,7 @@
                     </div>
                 </div>
 				<div class="nav-item dropdown">
-				<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" data-target="../tab-5/kurumsal-hizmetler.html">Kurumsal Hizmetler</a>
+				<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" data-target="tab-5/kurumsal-hizmetler.html">Kurumsal Hizmetler</a>
                     <div class="dropdown-menu m-0">
                         <a href="tab-5/muhasebe-hizmetleri.html" class="dropdown-item">Muhasebe Hizmetleri</a>
                         <a href="tab-5/insan-kaynaklari-hizmetleri.html" class="dropdown-item">İnsan Kaynakları Hizmetleri</a>
@@ -95,7 +95,7 @@
                     </div>
                 </div>
 				<div class="dropdown">
-					<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" data-target="../tab-6/Hakkimizda.html">Hakkımızda</a>
+					<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" data-target="tab-6/Hakkimizda.html">Hakkımızda</a>
 					<div class="dropdown-menu m-0">
 					<a href="tab-6/marka-hikayesi.html" class="dropdown-item">Marka Hikayesi</a>
 					<a href="tab-6/ekibimiz.html" class="dropdown-item">Ekibimiz</a>
@@ -180,7 +180,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="../tab-1/DenetimVeGuvence.html"  class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
+                <a href="tab-1/DenetimVeGuvence.html"  class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
                     <div class="service-item bg-light border-bottom border-5 border-primary rounded">
                         <div class="position-relative p-5">
 						<img style="width: 42% !important;" src="img/audit.png" alt="">
@@ -193,7 +193,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="../tab-3/KurumsalFinansman.html" class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.9s">
+                <a href="tab-3/KurumsalFinansman.html" class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.9s">
                     <div class="service-item bg-light border-bottom border-5 border-primary rounded">
                         <div class="position-relative p-5">
 						<img style="width: 42% !important;" src="img/budget.png" alt="">
@@ -205,7 +205,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="../tab-5/muhasebe-hizmetleri.html" class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
+                <a href="tab-5/muhasebe-hizmetleri.html" class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
                     <div class="service-item bg-light border-bottom border-5 border-primary rounded">
                         <div class="position-relative p-5">
 						<img style="width: 42% !important;" src="img/budget_66.png" alt="">
@@ -217,7 +217,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="../tab-5/insan-kaynaklari-hizmetleri.html" class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
+                <a href="tab-5/insan-kaynaklari-hizmetleri.html" class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
                     <div class="service-item bg-light border-bottom border-5 border-primary rounded">
                         <div class="position-relative p-5">
 						<img style="width: 42% !important;" src="img/financial.png" alt="">
@@ -230,7 +230,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="../tab-5/YonetimDanismanligi.html" class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.9s">
+                <a href="tab-5/YonetimDanismanligi.html" class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.9s">
                     <div class="service-item bg-light border-bottom border-5 border-primary rounded">
                         <div class="position-relative p-5">
 						<img style="width: 42% !important;" src="img/team-management.png" alt="">
