--- a/tab-2/vergi-davalari-ve-uyusmazlik-cozumleri.html
+++ b/tab-2/vergi-davalari-ve-uyusmazlik-cozumleri.html
@@ -46,7 +46,7 @@
 				<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" data-target="../tab-1/DenetimVeGuvence.html">Denetim ve Güvence</a>
                     <div class="dropdown-menu m-0">
                         <a href="../tab-1/bagimsiz-denetim-hizmetleri.html" class="dropdown-item">Bağımsız Denetim Hizmetleri</a>
-                        <a href="../tab-1/IcDenetim.html" class="dropdown-item">İç Denetim</a>
+                        <a href="../tab-1/ic-denetim.html" class="dropdown-item">İç Denetim</a>
                         <a href="../tab-1/hile-suistimal-denetimi.html" class="dropdown-item">Hile (Suistimal) Denetimi</a>
                         <a href="../tab-1/finansal-due-diligence.html" class="dropdown-item">Finansal "Due Diligence"</a>
                         <a href="../tab-1/ciro-denetimi.html" class="dropdown-item">Ciro Denetimi</a>
