--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h5 class="text-white text-uppercase animated bounceInDown">Best Security Services</h5>
                             <h1 class="display-1 text-white mb-md-4 animated zoomIn">AKC DENETİM Her Adımda Yanınızda!</h1>
-                            <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Get Quote</a>
-                            <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Contact Us</a>
+                            <!-- <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Get Quote</a> -->
+                            <!-- <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Contact Us</a> -->
                         </div>
                     </div>
                 </div>
@@ -133,8 +133,8 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h5 class="text-white text-uppercase animated bounceInDown">Best Security Services</h5>
                             <h1 class="display-1 text-white mb-md-4 animated zoomIn">Safe & Secure Home For Your Family</h1>
-                            <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Get Quote</a>
-                            <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Contact Us</a>
+                            <!-- <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Get Quote</a> -->
+                            <!-- <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Contact Us</a> -->
                         </div>
                     </div>
                 </div>
@@ -144,8 +144,8 @@
                         <div class="p-3" style="max-width: 900px;">
                             <h5 class="text-white text-uppercase animated bounceInDown">Bzzzzest Security Services</h5>
                             <h1 class="display-1 text-white mb-md-4 animated zoomIn">Safe & Secure Home For Your Family</h1>
-                            <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Get Quote</a>
-                            <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Contact Us</a>
+                            <!-- <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Get Quote</a> -->
+                            <!-- <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Contact Us</a> -->
                         </div>
                     </div>
                 </div>
@@ -256,8 +256,8 @@
                         <h1 class="display-5 text-white">Firmanızın Büyüme Yolculuğuna Güvenle Çıkın</h1>
                     </div>
                     <p class="text-white mb-4">AKC DENETIM ile uzmanlığımızı, iş bilgimizi ve teknolojiyi somut birer değere dönüştürüyor ve şirketinizin dijitalleşirken büyümesine yardımcı oluyoruz.</p>
-                    <a href="" class="btn btn-primary py-md-3 px-md-5 me-3">Order Now</a>
-                    <a href="" class="btn btn-secondary py-md-3 px-md-5">Read More</a>
+                    <!-- <a href="" class="btn btn-primary py-md-3 px-md-5 me-3">Order Now</a> -->
+                    <!-- <a href="" class="btn btn-secondary py-md-3 px-md-5">Read More</a> -->
                 </div>
             </div>
         </div>
@@ -269,8 +269,8 @@
     <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container">
             <div class="text-center mx-auto mb-5" style="max-width: 600px;">
-                <h5 class="text-primary text-uppercase" style="letter-spacing: 5px;">Team Members</h5>
-                <h1 class="display-5 mb-0">Our Professional Team Members</h1>
+                <h5 class="text-primary text-uppercase" style="letter-spacing: 5px;">AKC DENETİM</h5>
+                <h1 class="display-5 mb-0">Ekip Üyelerimiz</h1>
             </div>
             <div class="row g-5">
                 <div class="col-lg-4 wow slideInUp" data-wow-delay="0.3s">
