--- a/tab-1/DenetimVeGuvence.html
+++ b/tab-1/DenetimVeGuvence.html
@@ -79,7 +79,7 @@
                     <div class="dropdown-menu m-0">
                         <a href="../tab-4/tesvik-danismanligi.html" class="dropdown-item">Teşvik Danışmanlığı</a>
                         <a href="../tab-4/startup-danismanligi.html" class="dropdown-item">Start-Up Danışmanlığı</a>
-                        <a href="../tab-4/YonetimDanismanligi.html" class="dropdown-item">Yönetim Danışmanlığı</a>
+                        <a href="../tab-4/yonetim-danismanligi.html" class="dropdown-item">Yönetim Danışmanlığı</a>
                         <a href="../tab-4/e-ticaret-danismanligi.html" class="dropdown-item">E-Ticaret Danışmanlığı</a>
 						<a href="../tab-4/satis-pazarlama-danismanligi.html" class="dropdown-item">Satış & Pazarlama Danışmanlığı</a>
 						<a href="../tab-4/uluslararasi-danismanlik.html" class="dropdown-item">Uluslararası Danışmanlık</a>
@@ -121,35 +121,19 @@
 
     <!-- Blog Start -->
     <div class="container py-5 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="row g-5">
-            <div class="col-lg-12">
-                <!-- Blog Detail Start -->
-                <div class="mb-5">
-                    <img class="img-fluid w-100 rounded mb-5" src="../img/tab1/DenetimVeGunvece.jpg" alt="">
-                    <!-- <h1 class="mb-4">Diam dolor est labore duo ipsum clita sed et lorem tempor duo</h1> -->
-                    <!-- <p>Sadipscing labore amet rebum est et justo gubergren. Et eirmod ipsum sit diam ut -->
-                        <!-- magna lorem. Nonumy vero labore lorem sanctus rebum et lorem magna kasd, stet -->
-                        <!-- amet magna accusam consetetur eirmod. Kasd accusam sit ipsum sadipscing et at at -->
-                        <!-- sanctus et. Ipsum sit gubergren dolores et, consetetur justo invidunt at et -->
-                        <!-- aliquyam ut et vero clita. Diam sea sea no sed dolores diam nonumy, gubergren -->
-                        <!-- sit stet no diam kasd vero.</p> -->
-                    <!-- <p>Voluptua est takimata stet invidunt sed rebum nonumy stet, clita aliquyam dolores -->
-                        <!-- vero stet consetetur elitr takimata rebum sanctus. Sit sed accusam stet sit -->
-                        <!-- nonumy kasd diam dolores, sanctus lorem kasd duo dolor dolor vero sit et. Labore -->
-                        <!-- ipsum duo sanctus amet eos et. Consetetur no sed et aliquyam ipsum justo et, -->
-                        <!-- clita lorem sit vero amet amet est dolor elitr, stet et no diam sit. Dolor erat -->
-                        <!-- justo dolore sit invidunt.</p> -->
-                    <!-- <p>Diam dolor est labore duo invidunt ipsum clita et, sed et lorem voluptua tempor -->
-                        <!-- invidunt at est sanctus sanctus. Clita dolores sit kasd diam takimata justo diam -->
-                        <!-- lorem sed. Magna amet sed rebum eos. Clita no magna no dolor erat diam tempor -->
-                        <!-- rebum consetetur, sanctus labore sed nonumy diam lorem amet eirmod. No at tempor -->
-                        <!-- sea diam kasd, takimata ea nonumy elitr sadipscing gubergren erat. Gubergren at -->
-                        <!-- lorem invidunt sadipscing rebum sit amet ut ut, voluptua diam dolores at -->
-                        <!-- sadipscing stet. Clita dolor amet dolor ipsum vero ea ea eos.</p> -->
-                </div>
-                <!-- Blog Detail End -->
-            </div>
+	        <div class="row g-5">
+            <div class="container">
+  <div class="image-container">
+    <img class="img-fluid" src="../img/tab1/DenetimVeGunvece.jpg" alt="">
+    <div class="overlay"></div>
+    <div class="text">
+      <h2 style ="color: honeydew;font-family: 'Open Sans';">Denetim ve Güvence</h2>
+	  <p style ="color: honeydew;font-family: 'Open Sans';">Denetim ve güvence hizmetlerimizle iş hayatında ve toplumda güven oluşturmaya, kontrol mekanizmaları geliştirmeye , finansal sorunlara çözüm üretmeye destek oluyoruz</p>
+    </div>
+  </div>
+</div>
         </div>
+		</br>
 		<div class="row g-5" style="margin-bottom: 60px">
    		<div class="col-lg-4" style="display: flex;
 				flex-direction: column;
