--- a/tab-5/muhasebe-hizmetleri.html
+++ b/tab-5/muhasebe-hizmetleri.html
@@ -79,7 +79,7 @@
                     <div class="dropdown-menu m-0">
                         <a href="../tab-4/tesvik-danismanligi.html" class="dropdown-item">Teşvik Danışmanlığı</a>
                         <a href="../tab-4/startup-danismanligi.html" class="dropdown-item">Start-Up Danışmanlığı</a>
-                        <a href="../tab-4/YonetimDanismanligi.html" class="dropdown-item">Yönetim Danışmanlığı</a>
+                        <a href="../tab-4/yonetim-danismanligi.html" class="dropdown-item">Yönetim Danışmanlığı</a>
                         <a href="../tab-4/e-ticaret-danismanligi.html" class="dropdown-item">E-Ticaret Danışmanlığı</a>
 						<a href="../tab-4/satis-pazarlama-danismanligi.html" class="dropdown-item">Satış & Pazarlama Danışmanlığı</a>
 						<a href="../tab-4/uluslararasi-danismanlik.html" class="dropdown-item">Uluslararası Danışmanlık</a>
@@ -121,15 +121,20 @@
 
     <!-- Blog Start -->
     <div class="container py-5 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="row g-5">
-            <div class="col-lg-12">
-                <!-- Blog Detail Start -->
-                <div class="mb-5">
-                    <img class="img-fluid w-100 rounded mb-5" src="../img/tab5/Muhasebe-Hizmetleri-scaled.jpg" alt="">
-                </div>
-                <!-- Blog Detail End -->
-            </div>
+	 <div class="row g-5">
+            <div class="container">
+  <div class="image-container">
+    <img class="img-fluid" src="../img/tab5/Muhasebe-Hizmetleri-scaled.jpg" alt="">
+    <div class="overlay"></div>
+    <div class="text">
+      <h2 style ="color: honeydew;font-family: 'Open Sans';">Muhasebe Hizmetleri</h2>
+	  <p style ="color: honeydew;font-family: 'Open Sans';">Müşterilerimizin muhasebe fonksiyonlarını sorunsuz ve akıcı şekilde sürdürmelerini sağlıyoruz. Sunduğumuz muhasebe hizmetleri ile, şirket sahipleri, yatırımcılar ve düzenleyicilere karşı sağlıklı ve güvenilir bir muhasebe sistemi oluşturuyor ve müşterilerimiz üzerindeki muhasebe yükünü alıyoruz.
+</p>
+    </div>
+  </div>
+</div>
         </div>
+		</br>
 		<div class="row g-5" style="margin-bottom: 60px">
 		
    		<div class="col-lg-3" style="display: flex;
