--- a/tab-2/sirket-birlesmeleri-bolunmeleri-yapilandirmalari.html
+++ b/tab-2/sirket-birlesmeleri-bolunmeleri-yapilandirmalari.html
@@ -79,7 +79,7 @@
                     <div class="dropdown-menu m-0">
                         <a href="../tab-4/tesvik-danismanligi.html" class="dropdown-item">Teşvik Danışmanlığı</a>
                         <a href="../tab-4/startup-danismanligi.html" class="dropdown-item">Start-Up Danışmanlığı</a>
-                        <a href="../tab-4/YonetimDanismanligi.html" class="dropdown-item">Yönetim Danışmanlığı</a>
+                        <a href="../tab-4/yonetim-danismanligi.html" class="dropdown-item">Yönetim Danışmanlığı</a>
                         <a href="../tab-4/e-ticaret-danismanligi.html" class="dropdown-item">E-Ticaret Danışmanlığı</a>
 						<a href="../tab-4/satis-pazarlama-danismanligi.html" class="dropdown-item">Satış & Pazarlama Danışmanlığı</a>
 						<a href="../tab-4/uluslararasi-danismanlik.html" class="dropdown-item">Uluslararası Danışmanlık</a>
@@ -121,6 +121,19 @@
 
     <!-- Blog Start -->
     <div class="container py-5 wow fadeInUp" data-wow-delay="0.1s">
+	        <div class="row g-5">
+            <div class="container">
+  <div class="image-container">
+    <img class="img-fluid" src="../img/tab2/Sirket-Birlesmesi-ve-Yapilandirmalari-scaled.jpg" alt="">
+    <div class="overlay"></div>
+    <div class="text">
+      <h2 style ="color: honeydew;font-family: 'Open Sans';">Şirket Birleşmeleri, Bölünmeleri ve Yapılandırmaları</h2>
+	  <p style ="color: honeydew;font-family: 'Open Sans';">Şirket birleşmeleri ve satın alım işlemlerinde Vergi Riski Değerlendirmesi (Tax Due Diligence) veya yeni yapının vergi planı oluşturulması konusunda yatırımcılara destek oluyoruz</p>
+    </div>
+  </div>
+</div>
+        </div>
+		</br>
         <div class="row g-5">
             <div class="col-lg-12">
                 <!-- Blog Detail Start -->
