--- a/tab-4/e-ticaret-danismanligi.html
+++ b/tab-4/e-ticaret-danismanligi.html
@@ -79,7 +79,7 @@
                     <div class="dropdown-menu m-0">
                         <a href="../tab-4/tesvik-danismanligi.html" class="dropdown-item">Teşvik Danışmanlığı</a>
                         <a href="../tab-4/startup-danismanligi.html" class="dropdown-item">Start-Up Danışmanlığı</a>
-                        <a href="../tab-4/YonetimDanismanligi.html" class="dropdown-item">Yönetim Danışmanlığı</a>
+                        <a href="../tab-4/yonetim-danismanligi.html" class="dropdown-item">Yönetim Danışmanlığı</a>
                         <a href="../tab-4/e-ticaret-danismanligi.html" class="dropdown-item">E-Ticaret Danışmanlığı</a>
 						<a href="../tab-4/satis-pazarlama-danismanligi.html" class="dropdown-item">Satış & Pazarlama Danışmanlığı</a>
 						<a href="../tab-4/uluslararasi-danismanlik.html" class="dropdown-item">Uluslararası Danışmanlık</a>
@@ -121,15 +121,19 @@
 
     <!-- Blog Start -->
     <div class="container py-5 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="row g-5">
-            <div class="col-lg-12">
-                <!-- Blog Detail Start -->
-                <div class="mb-5">
-                    <img class="img-fluid w-100 rounded mb-5" src="../img/tab4/E-Ticaret-Danismanligi-1-scaled.jpg" alt="">
-                </div>
-                <!-- Blog Detail End -->
-            </div>
+	        <div class="row g-5">
+            <div class="container">
+  <div class="image-container">
+    <img class="img-fluid" src="../img/tab4/E-Ticaret-Danismanligi-1-scaled.jpg" alt="">
+    <div class="overlay"></div>
+    <div class="text">
+      <h2 style ="color: honeydew;font-family: 'Open Sans';">E-Ticaret Danışmanlığı</h2>
+	  <p style ="color: honeydew;font-family: 'Open Sans';">Kaliteli e-ticaret sistemlerinin en önemli özelliği zamandan tasarruf etmek ve operasyonlarla ilgili riskleri minimuma indirmektir. Ventera her zaman müşterilerine daha iyi, daha hızlı ve üstün deneyim sağlayan parlak fikirlere odaklanır.</p>
+    </div>
+  </div>
+</div>
         </div>
+		</br>
 		<div class="row g-5" style="margin-bottom: 60px">
 		
    		<div class="col-lg-3" style="display: flex;
