--- a/index.html
+++ b/index.html
@@ -40,19 +40,22 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <div class="navbar-nav mx-auto py-0">
-                <div class="nav-item dropdown">
-				<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" data-target="tab-1/DenetimVeGuvence.html">Denetim ve Güvence</a>
-                    <ul class="dropdown-menu m-0">
-                        <li><a href="tab-1/bagimsiz-denetim-hizmetleri.html" class="dropdown-item">Bağımsız Denetim Hizmetleri</a></li>
-                        <li><a href="tab-1/ic-denetim.html" class="dropdown-item">İç Denetim</a></li>
-                        <li><a href="tab-1/hile-suistimal-denetimi.html" class="dropdown-item">Hile (Suistimal) Denetimi</a></li>
-                        <li><a href="tab-1/finansal-due-diligence.html" class="dropdown-item">Finansal "Due Diligence"</a></li>
-                        <li><a href="tab-1/ciro-denetimi.html" class="dropdown-item">Ciro Denetimi</a></li>
-						<li><a href="tab-1/finansal-check-up.html" class="dropdown-item">Finansal Check-Up</a></li>
-                    </ul>
-                </div>
+<div class="collapse navbar-collapse" id="navbarCollapse">
+  <div class="navbar-nav mx-auto py-0">
+    <div class="nav-item dropdown">
+      <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" data-target="tab-1/DenetimVeGuvence.html">Denetim ve Güvence</a>
+      <a class="nav-link dropdown-toggle d-lg-none" href="#" data-bs-toggle="collapse" data-bs-target="#submenuCollapse" aria-expanded="false" aria-controls="submenuCollapse">
+        <span class="navbar-toggler-icon"></span>
+      </a>
+      <div class="dropdown-menu m-0" id="submenuCollapse">
+        <a href="tab-1/bagimsiz-denetim-hizmetleri.html" class="dropdown-item">Bağımsız Denetim Hizmetleri</a>
+        <a href="tab-1/ic-denetim.html" class="dropdown-item">İç Denetim</a>
+        <a href="tab-1/hile-suistimal-denetimi.html" class="dropdown-item">Hile (Suistimal) Denetimi</a>
+        <a href="tab-1/finansal-due-diligence.html" class="dropdown-item">Finansal "Due Diligence"</a>
+        <a href="tab-1/ciro-denetimi.html" class="dropdown-item">Ciro Denetimi</a>
+        <a href="tab-1/finansal-check-up.html" class="dropdown-item">Finansal Check-Up</a>
+      </div>
+    </div>
 				<div class="nav-item dropdown">
 					<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" data-target="tab-2/VergiDanismanligi.html">Vergi Danışmanlığı</a>
                     <div class="dropdown-menu m-0">
@@ -386,6 +389,7 @@
         </div>
     </div>
     <!-- Footer End -->
+
 
 
     <!-- JavaScript Libraries -->
